<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_BeamDemand" Id="{dc58a99f-7463-4180-868a-67e2f1826a21}">
    <Declaration><![CDATA[TYPE ST_BeamDemand :
STRUCT
	// What beam rate is required from a device? (Probably units of frequency) 
	beamRate : LREAL;
	// Demand specifies if this demand is an emergency (True). Non-Demand is for non-emergencies
	demand : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>