<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="BisscEvaluator" Id="{0cb3e4b3-8172-46ac-8d55-9c1f5efc80d4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION BisscEvaluator : ST_BeamDemand
VAR_INPUT
	encoder : ST_BisscEncoder;
END_VAR
VAR	
	readLoc: ULINT;
	newDemand : ST_BeamDemand;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[readLoc := Encoder.encLoc;
IF readLoc <= Encoder.ncULimit THEN
	newDemand.demand := TRUE;
ELSE
	newDemand.demand := FALSE;
END_IF

IF readLoc <= Encoder.ncULimit THEN 
	newDemand.beamRate := 0;
ELSE
	newDemand.beamRate := 50;
END_IF

BisscEvaluator := newDemand;]]></ST>
    </Implementation>
    <LineIds Name="BisscEvaluator">
      <LineId Id="15" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>